# dtiku-paper

./: .env  .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  ai.Dockerfile  alist.Dockerfile  artalk.Dockerfile  backend.Dockerfile  docker-compose.yaml  mobile-api.Dockerfile  package-lock.json  test-api.http  web.Dockerfile
ddl/: paper.sql
dtiku-ai/: Cargo.toml
dtiku-ai/config/: app.toml
dtiku-ai/proto/: embedding.proto
dtiku-ai/src/: lib.rs  main.rs
dtiku-ai/src/config/: hf_config.rs
dtiku-ai/src/plugins/: fastembed.rs  mod.rs
dtiku-ai/src/service/: embedding.rs  mod.rs
dtiku-alist/: Cargo.toml  alist.http
dtiku-alist/config/: app.toml
dtiku-alist/src/: main.rs
dtiku-alist/src/plugins/: mod.rs
dtiku-alist/src/router/: img.rs
dtiku-alist/src/rpc/: alist.rs  mod.rs
dtiku-artalk/: Cargo.toml  build.rs
dtiku-artalk/config/: app-prod.toml  app.toml
dtiku-artalk/src/: main.rs
dtiku-artalk/src/service/: mod.rs
dtiku-backend/: .env  .gitignore  Cargo.toml  Dockerfile  build.rs
dtiku-backend/config/: app-prod.toml  app.toml
dtiku-backend/frontend/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml
dtiku-backend/frontend/app/: ajax.ts  layout.tsx  page.tsx
dtiku-backend/frontend/component/: JsonEditor.jsx
dtiku-backend/frontend/src/: App.jsx  rest.js
dtiku-backend/src/: job.rs  jobs.rs  main.rs
dtiku-backend/src/config/: embedding.rs  hf_config.rs  mod.rs  openai.rs
dtiku-backend/src/jobs/: assets_saver.rs  chinagwy_sync.rs  fenbi.rs  fenbi_sync.rs  huatu_sync.rs  idiom_fetch.rs  mod.rs  offcn_sync.rs  pay_trade_fetcher.rs  shenlun_categorize.rs  web_solution_collect.rs  web_solution_collect_bak.rs
dtiku-backend/src/plugins/: embedding.rs  fastembed.rs  jobs.rs  mod.rs
dtiku-backend/src/router/: config.rs  exam.rs  keypoint.rs  matviews.rs  mod.rs  pay.rs  stats.rs  task.rs  test.rs  user.rs
dtiku-backend/src/service/: nlp.rs
dtiku-backend/src/utils/: hash.rs  hnsw.rs  mod.rs  regex.rs
dtiku-backend/src/views/: config.rs  exam.rs  mod.rs  task.rs  test.rs
dtiku-base/: Cargo.toml
dtiku-base/src/: error.rs  lib.rs
dtiku-base/src/model/: enums.rs  mod.rs  schedule_task.rs  system_config.rs  user_info.rs
dtiku-base/src/query/: mod.rs
dtiku-base/src/service/: system_config.rs
dtiku-bbs/: Cargo.toml
dtiku-bbs/src/: lib.rs
dtiku-bbs/src/domain/: issue.rs
dtiku-bbs/src/http/: artalk.rs  mod.rs
dtiku-bbs/src/model/: issue.rs  mod.rs
dtiku-bbs/src/service/: issue.rs
dtiku-core/: Cargo.toml
dtiku-core/src/: lib.rs
dtiku-core/src/model/: label.rs  material.rs  mod.rs
dtiku-mobile-api/: Cargo.toml  MOBILE_API_MIGRATION.md  NEXT_STEPS.md  README.md
dtiku-mobile-api/config/: app-prod.toml  app.toml
dtiku-mobile-api/src/: main.rs
dtiku-mobile-api/src/router/: idiom.rs  issue.rs  mod.rs  paper.rs  pay.rs  question.rs  system.rs  user.rs
dtiku-mobile-api/src/service/: issue.rs  mod.rs  user.rs
dtiku-paper/: Cargo.toml
dtiku-paper/src/: lib.rs
dtiku-paper/src/domain/: exam_category.rs  keypoint.rs  label.rs  mod.rs  paper.rs  question.rs
dtiku-paper/src/model/: assets.rs  exam_category.rs  key_point.rs  label.rs  material.rs  mod.rs  paper.rs  paper_material.rs  paper_question.rs  paper_type.rs  question.rs  question_keypoint.rs  question_keypoint_stats.rs  question_material.rs  scraper_solution.rs  solution.rs
dtiku-paper/src/query/: mod.rs  paper.rs  question.rs
dtiku-paper/src/service/: exam_category.rs  keypoint.rs  label.rs  mod.rs  paper.rs  question.rs
dtiku-paper/src/util/: html.rs  mod.rs  str.rs
dtiku-pay/: Cargo.toml
dtiku-pay/sandbox/: alipayPublicCert.crt  appPublicCert.crt
dtiku-pay/src/: config.rs  lib.rs
dtiku-pay/src/model/: mod.rs  pay_order.rs
dtiku-pay/src/service/: mod.rs  pay_order.rs
dtiku-stats/: Cargo.toml
dtiku-stats/src/: lib.rs
dtiku-stats/src/domain/: mod.rs
dtiku-stats/src/model/: idiom.rs  idiom_ref.rs  mod.rs
dtiku-stats/src/query/: mod.rs
dtiku-stats/src/service/: idiom.rs  mod.rs
dtiku-web/: .gitignore  API_SUMMARY.md  Cargo.toml  Dockerfile  build.rs
dtiku-web/config/: app-prod.toml  app.toml
dtiku-web/src/: main.rs
dtiku-web/src/data/: paper.rs
dtiku-web/src/job/: mod.rs  pay_confirm.rs
dtiku-web/src/plugins/: dav_client.rs  grpc_client.rs  mod.rs
dtiku-web/src/query/: bbs.rs  idiom.rs  mod.rs  paper.rs  pay.rs  question.rs
dtiku-web/src/router/: bbs.rs  error_messages.rs  home.rs  idiom.rs  img.rs  jwt.rs  key_point.rs  middleware.rs  mod.rs  paper.rs  pay.rs  question.rs  shenlun_category.rs  traffic.rs  user.rs
dtiku-web/src/rpc/: alist.rs  artalk.rs  cap.rs  mod.rs  wechat.rs
dtiku-web/src/service/: issue.rs  mod.rs  traffic.rs  user.rs
dtiku-web/src/views/: bbs.rs  filters.rs  home.rs  idiom.rs  mod.rs  paper.rs  pay.rs  question.rs  shenlun_category.rs  user.rs
dtiku-web/static/: manifest.json  robots.txt
dtiku-web/template/: list-paper.html  paper.html
dtiku-web/template/fragments/: paper.html
dtiku-web/templates/: anti-bot-cap.html.jinja  anti-bot.html.jinja  cluster-paper.html.jinja  home.html  home.html.jinja  idiom-print.html.jinja  idiom.html.jinja  list-idiom.html.jinja  list-paper.html  list-paper.html.jinja  paper.html  paper.html.jinja  pay-redirect.html.jinja  pay-trade-create.html.jinja  question-search-img.html.jinja  question-search.html  question-search.html.jinja  question-section.html  question-section.html.jinja  question.html  question.html.jinja  refresh.html.jinja  shenlun-category.html.jinja
dtiku-web/templates/error/: err.html.jinja
dtiku-web/templates/issue/: issue-collect.html.jinja  issue-content.html.jinja  issue-editor.html.jinja  issue.html.jinja  list.html  list.html.jinja  paywall-content.html.jinja
dtiku-web/templates/macros/: artalk.html  artalk.html.jinja  elements.html.jinja  general.html  general.html.jinja  idiom.html.jinja  issue.html.jinja  painter.html.jinja  paper.html  paper.html.jinja  paywall.html.jinja  qrcode.html.jinja  question.html  question.html.jinja  shenlun-template.html.jinja
dtiku-web/templates/question/: detail.html.jinja  (+5 more)
(+98 files in other folders)
