[workspace]
members = [
    "dtiku-ai",
    "dtiku-artalk",
    "dtiku-backend",
    "dtiku-web",
    "dtiku-paper",
    "dtiku-bbs",
    "dtiku-stats",
    "dtiku-base",
    "dtiku-macros",
]

[workspace.dependencies]
tokio = "1"
spring = "0.4"
spring-web = "0.4"
spring-grpc = "0.4"
spring-sea-orm = "0.4"
spring-redis = "0.4"
spring-stream = "0.4"
spring-job = "0.4"
spring-sqlx = "0.4"
spring-opentelemetry = "0.4"
sea-orm = "1.1"
sqlx = "0.8"
axum-extra = "0.10"
cookie = "0.18"
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
serde_with = "3"
strum = "0.26"
derive_more = "1"
itertools = "0.14"
strs_tools = "0.19"
thiserror = "2"
anyhow = "1"
fastembed = "4.8.0"
# rust-bert = "0.23"
hnsw = "0.11"
hnsw_rs = "0.3"
askama = "0.14"
chrono = "0.4"
futures = "0.3"
regex = "1"
lazy_static = "1"
scraper = "0.21"
dashmap = "6.1"
strsim = "0.11.1"
textdistance = "1.1.1"
prost = "0.13"
tonic = "0.13"
ort = "2.0.0-rc.9"
search-api = "0.1"
chinese-number = "0.7"
feignhttp = "0.5"
reqwest = "0.12"
just-auth = "0.1"
jsonwebtoken = "9.3"
reqwest_dav = "0.2"
uuid = "1.16"
alipay_sdk_rust = "1.0.14"
wechat-pay-rust-sdk = "0.2.18"