[workspace]
members = [
    "dtiku-artalk",
    "dtiku-backend",
    "dtiku-web",
    "dtiku-pay",
    "dtiku-paper",
    "dtiku-bbs",
    "dtiku-stats",
    "dtiku-base",
]

[workspace.dependencies]
tokio = "1"
spring = "0.4"
spring-web = "0.4"
spring-grpc = "0.4"
spring-sea-orm = "0.4"
spring-redis = "0.4"
spring-stream = "0.4"
spring-job = "0.4"
spring-sqlx = "0.4"
spring-opentelemetry = "0.4"
spring-opendal = "0.4"
sea-orm = "1.1"
sqlx = "0.8"
axum = "0.8"
axum-extra = "0.10"
axum-valid = "0.24"
askama_web = "0.14"
cookie = "0.18"
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
serde_html_form = "0.2"
serde_with = "3"
strum = "0.26"
derive_more = "2"
itertools = "0.14"
strs_tools = "0.21"
thiserror = "2"
anyhow = "1"
# ort = "2.0.0-rc.9"
openai-api-rs = "6.0"
ouroboros = "0.18"
hnsw = "0.11"
hnsw_rs = "0.3"
askama = "0.14"
chrono = "0.4"
futures = "0.3"
regex = "1"
fancy-regex = "0.15"
lazy_static = "1"
once_cell = "1.21"
dashmap = "6.1"
textdistance = "1.1"
prost = "0.13"
tonic = "0.13"
chinese-number = "0.7"
feignhttp = "0.5"
scraper = "0.23"
reqwest = "0.12"
reqwest-scraper = "0.7.1"
just-auth = "0.1"
jsonwebtoken = "9.3"
reqwest_dav = "0.2"
uuid = "1.16"
alipay_sdk_rust = "1.0.14"
wechat-pay-rust-sdk = "0.2.18"
pinyin = "0.10"
rustls = "0.23"
validator = "0.20"
sha2 = "0.10"
readability = "0.3"
extractous = "0.3"
dom_smoothie = "0.11"
gaoya = "0.2"
url = "2.5"
rand = "0.9"
search-api = "0.2"
md5 = "0.8"
jieba-rs = "0.8"
