[workspace]
resolver = "2"
members = [
    "dtiku-artalk",
    "dtiku-backend",
    "dtiku-web",
    "dtiku-mobile-api",
    "dtiku-pay",
    "dtiku-paper",
    "dtiku-bbs",
    "dtiku-stats",
    "dtiku-base",
    "dtiku-alist",
]

[workspace.dependencies]
# ort = "2.0.0-rc.9"
alipay_sdk_rust = "1.0.15"
anyhow = "1"
askama = "0.14"
askama_web = "0.14"
axum = "0.8"
axum-client-ip = "1.1"
axum-extra = "0.10"
axum-valid = "0.24"
chinese-number = "0.7"
chrono = "0.4"
cookie = "0.18"
dashmap = "6.1"
derive_more = "2"
dom_smoothie = "0.11.2"
extractous = "0.3"
fancy-regex = "0.15"
feignhttp = "0.5"
futures = "0.3"
gaoya = "0.2"
hex = "0.4"
hickory-resolver = "0.25"
hnsw = "0.11"
hnsw_rs = "0.3"
http = "1.3"
img_hash = "3.2"
ipnet = "2.11"
itertools = "0.14"
jieba-rs = "0.8"
jsonwebtoken = "9.3"
just-auth = "0.1"
maplit = "1.0"
md5 = "0.8"
notify = "8.1"
openai-api-rs = "8.0"
ouroboros = "0.18"
pgvector = "0.4.1"
pinyin = "0.10"
prost = "0.13"
pulldown-cmark = "0.13"
quick-xml = "0.37"
rand = "0.9"
readability = "0.3"
regex = "1"
reqwest = "0.12"
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
reqwest-scraper = "0.7.1"
reqwest-tracing = "0.5"
rustls = "0.23"
scraper = "0.23"
schemars = "1.1"
sea-orm = "1.1"
search-api = "0.2"
serde = "1"
serde_html_form = "0.2"
serde_json = "1"
serde_urlencoded = "0.7"
serde_with = "3"
sha1 = "0.10"
sha2 = "0.10"
spring = "0.4"
spring-grpc = "0.4"
spring-job = "0.4"
spring-opendal = "0.4"
spring-opentelemetry = "0.4"
spring-redis = "0.4"
spring-sea-orm = "0.4"
spring-sqlx = "0.4"
spring-stream = "0.4"
spring-web = "0.4"
sqlx = "0.8"
strs_tools = "0.21"
strum = "0.26"
textdistance = "1.1"
thiserror = "2"
tokio = "1"
tonic = "0.13"
tower_governor = "0.8"
url = "2.5"
uuid = "1.16"
validator = "0.20"
wechat-pay-rust-sdk = "0.2.20"
phf = "0.13.1"
