[package]
name = "dtiku-artalk"
version = "0.0.1"
edition = "2021"
publish = ["crates-io"]

[[bin]]
name = "artalk"
path = "src/main.rs"

[dependencies]
spring = { workspace = true }
spring-grpc = { workspace = true }
spring-sqlx = { workspace = true }
spring-opentelemetry = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
anyhow = { workspace = true }
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
prost = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = "0.13"
