[package]
name = "dtiku-backend"
version = "0.0.1"
edition = "2021"
publish = ["crates-io"]

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
spring = { workspace = true }
spring-web = { workspace = true }
spring-stream = { workspace = true, features = ["redis"] }
spring-job = { workspace = true }
spring-sea-orm = { workspace = true }
spring-sqlx = { workspace = true, features = ["postgres"] }
spring-redis = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dtiku-paper = { path = "../dtiku-paper", version = "0.0.1" }
dtiku-base = { path = "../dtiku-base", version = "0.0.1" }
itertools = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["deref"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-postgres"] }
sqlx = { workspace = true, features = ["postgres"] }
anyhow = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
fastembed = { workspace = true }
scraper = { workspace = true }
hnsw = { workspace = true }
hnsw_rs = { workspace = true }