[package]
name = "dtiku-backend"
version = "0.0.1"
edition = "2021"
publish = ["crates-io"]

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
spring = { workspace = true }
spring-web = { workspace = true }
spring-stream = { workspace = true, features = ["redis"] }
spring-job = { workspace = true }
spring-sea-orm = { workspace = true, features = ["postgres", "with-web"] }
spring-sqlx = { workspace = true, features = ["postgres"] }
spring-redis = { workspace = true }
spring-opentelemetry = { workspace = true }
spring-opendal = { workspace = true, features = [
    "services-webdav",
    "layers-tracing",
] }
tokio = { workspace = true, features = ["full"] }
dtiku-paper = { path = "../dtiku-paper", version = "0.0.1" }
dtiku-base = { path = "../dtiku-base", version = "0.0.1" }
dtiku-stats = { path = "../dtiku-stats", version = "0.0.1" }
itertools = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-postgres"] }
sqlx = { workspace = true, features = ["postgres"] }
anyhow = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
fancy-regex = { workspace = true }
lazy_static = { workspace = true }
scraper = { workspace = true }
reqwest = { workspace = true }
reqwest-scraper = { workspace = true }
hnsw = { workspace = true }
hnsw_rs = { workspace = true }
dashmap = { workspace = true }
textdistance = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
pinyin = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
readability = { workspace = true }
dom_smoothie = { workspace = true, features = ["serde"] }
ouroboros = { workspace = true }
# extractous = { workspace = true }
openai-api-rs = { workspace = true }
rand = { workspace = true }
gaoya = { workspace = true }
axum = { workspace = true, features = ["macros"] }
search-api = { workspace = true }
md5 = { workspace = true }
