[package]
name = "dtiku-base"
version = "0.0.1"
edition = "2021"

[dependencies]
spring = { workspace = true }
spring-redis = { workspace = true }
spring-stream = { workspace = true, features = ["json"] }
sea-orm = { workspace = true, features = ["sqlx-postgres"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
