[package]
name = "dtiku-bbs"
version = "0.0.1"
edition = "2021"

[dependencies]
spring = "0.2"
sea-orm = { version = "1.1", features = ["sqlx-postgres"] }
serde = "1"
serde_json = "1"
# rust-bert = "0.23"
pgvector = { version = "0.4", features = ["postgres"] }
strum = { version = "0.26", features = ["derive"] }
