[package]
name = "dtiku-bbs"
version = "0.0.1"
edition = "2021"

[dependencies]
spring.workspace = true
sea-orm = { workspace = true, features = ["sqlx-postgres"] }
serde = { workspace = true }
serde_urlencoded = { workspace = true }
spring-sea-orm = { workspace = true }
strum = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
feignhttp = { workspace = true, features = ["json"] }
