[package]
name = "dtiku-paper"
version = "0.0.1"
edition = "2021"
publish = ["crates-io"]

[dependencies]
spring = { workspace = true }
spring-redis = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-postgres"] }
serde = { workspace = true }
serde_json = { workspace = true }
pgvector = { workspace = true, features = ["postgres"] }
strum = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
anyhow = { workspace = true }
fastembed = { workspace = true }
# rust-bert = "0.23"
