[package]
name = "dtiku-paper"
version = "0.0.1"
edition = "2021"
publish = ["crates-io"]

[dependencies]
spring = { workspace = true }
spring-redis = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-postgres", "postgres-vector"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
anyhow = { workspace = true }
fastembed = { workspace = true }