[package]
name = "dtiku-paper"
version = "0.0.1"
edition = "2021"
publish = ["crates-io"]

[dependencies]
spring = { workspace = true }
spring-redis = { workspace = true }
spring-stream = { workspace = true, features = ["redis", "json"] }
spring-sea-orm = { workspace = true, features = ["with-web"] }
sea-orm = { workspace = true, features = ["sqlx-postgres", "postgres-vector"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["display"] }
itertools = { workspace = true }
anyhow = { workspace = true }
validator = { workspace = true, features = ["derive"] }
regex = { workspace = true }
fancy-regex = { workspace = true }
once_cell = { workspace = true }
scraper = { workspace = true }
textdistance = { workspace = true }
md5 = { workspace = true }
gaoya = { workspace = true }
pgvector = { workspace = true }
sqlx = { workspace = true }
lazy_static = { workspace = true }
phf = { workspace = true, features = ["macros"] }

[dev-dependencies]
tokio = { workspace = true }
