[package]
name = "dtiku-stats"
version = "0.0.1"
edition = "2021"

[dependencies]
spring = { workspace = true }
spring-sea-orm = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-postgres"] }
dtiku-paper = { path = "../dtiku-paper", version = "0.0.1" }
strum = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }