[package]
name = "dtiku-web"
version = "0.0.1"
edition = "2021"
publish = ["crates-io"]

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
spring = { workspace = true }
spring-web = { workspace = true }
spring-sea-orm = { workspace = true, features = ["postgres", "with-web"] }
spring-redis = { workspace = true }
spring-opentelemetry = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dtiku-base = { path = "../dtiku-base", version = "0.0.1" }
dtiku-paper = { path = "../dtiku-paper", version = "0.0.1" }
dtiku-bbs = { path = "../dtiku-bbs", version = "0.0.1" }
askama = { workspace = true, features = ["serde_json"] }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
chinese-number = { workspace = true }
strum = { workspace = true, features = ["derive"] }
just-auth = { workspace = true }
axum-extra = { workspace = true, features = ["cookie", "typed-header"] }
lazy_static = { workspace = true }
jsonwebtoken = { workspace = true }
derive_more = { workspace = true, features = ["deref"] }
prost = { workspace = true }
tonic = { workspace = true }
feignhttp = { workspace = true, features = ["json"] }

[build-dependencies]
minify-html = "0.16"
walkdir = "2"
tonic-build = "0.13"
